--- a/mozer/hw2/app/src/main/res/values/strings.xml
+++ b/mozer/hw2/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">hw2</string>
+    <string name="toCart">в корзину</string>
+    <string name="lorem">Lorem Ipsum has been the industry\'s
+        standard dummy text ever since the 1500s, when an unknown
+        printer took a galley of type and scrambled it to make a
+        type specimen book. It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software
+        like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it?</string>
+    <string name="saveToFavorites">Отложить</string>
 </resources>
