--- a/tsvetkova/HW3/app/src/main/res/values/strings.xml
+++ b/tsvetkova/HW3/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="action">action</string>
     <string name="title">Card with content</string>
     <string name="description">Content description"</string>
+    <string name="share">Share</string>
+    <string name="tab1">Tab 1</string>
+    <string name="tab2">Tab 2</string>
 </resources>
