--- a/patrusheva/lesson3/app/src/main/res/values/strings.xml
+++ b/patrusheva/lesson3/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="menu_item_home">Home</string>
     <string name="menu_item_recent">Recent</string>
     <string name="menu_item_profile">Profile</string>
+    <string name="card_title">Card with content</string>
+    <string name="card_description">Content description</string>
+    <string name="card_button_text">Action</string>
 </resources>
