--- a/mozer/hw7/app/src/main/res/values/strings.xml
+++ b/mozer/hw7/app/src/main/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="subscribe">Subscribe</string>
     <string name="edit">Edit</string>
     <string name="logout">logout</string>
+    <string name="title_auth">NanoPost</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="btn_continue">Continue</string>
 
 </resources>
