Fixed new mistakes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="pdf_size">(0.4 МБ)</string>
     <string name="promotion">Акции по этому товару</string>
     <string name="sale2">45%</string>
-    <string name="best_pay_text">Скидка 45% по акции \"Лучшая покупка дня\"</string>
+    <string name="best_pay_text">Скидка 45% по акции \"Лучшая\nпокупка дня\"</string>
     <string name="timer">Осталось 3 дня 6 часов</string>
     <string name="description">Описание</string>
     <string name="text">\"Райский остров\" известен в округе как место, где обеспеченные господа могут предаваться чревоугодию, азартным играм и проводить время в обществе изысканных куртизанок. Судья Ди - человек строгих</string>
